<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="all_games">All Games</string>
    <string name="all_games_text">all games</string>
    <string name="already_shared">Thanks. You already shared our game</string>
    <string name="app_name">Memory Games</string>
    <string name="at_current_level_placeholder">at level %d</string>
    <string name="average_level">Average level</string>
    <string name="back">Back</string>
    <string name="banner_remove_ads">"● Removing Ads everywhere.
You won't see any of it again!"</string>
    <string name="banner_remove_ads2">"Removing Ads everywhere. You won't see any of it again!"</string>
    <string name="banner_text">"● Removing Ads

● Free Replay

● Unlock all games

● +1000 coins"</string>
    <string name="banner_text2_1">Removing Ads</string>
    <string name="banner_text2_2">Unlock all games</string>
    <string name="banner_text2_3">+1000 coins</string>
    <string name="bets">BETS</string>
    <string name="brain_games">BRAIN GAMES</string>
    <string name="button_text_ok">Ok</string>
    <string name="categoryAttention">ATTENTION</string>
    <string name="categoryFlexibility">FLEXIBILITY</string>
    <string name="categoryImagination">IMAGINATION</string>
    <string name="categoryMemory">MEMORY</string>
    <string name="categoryProblemSolving">PROBLEM SOLVING</string>
    <string name="categorySpeed">SPEED</string>
    <string name="challenge">Challenge</string>
    <string name="choose_answer">Choose right answer</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="coins">coins</string>
    <string name="congratulations">Congratulations!</string>
    <string name="continueText">Continue</string>
    <string name="current_level_placeholder">Current level %d</string>
    <string name="dialog_fail">You lost :(</string>
    <string name="dialog_feedback_title">Would you like to leave a feedback?</string>
    <string name="dialog_leave_feedback_no">Not now</string>
    <string name="dialog_leave_feedback_yes">Okay</string>
    <string name="dialog_look_ranks">You need to Login to watch your rank</string>
    <string name="dialog_lose_bet">You will lose your bet if you quit. Are you sure?</string>
    <string name="dialog_new_like_title">Do you like</string>
    <string name="dialog_new_like_us_no">Not, really</string>
    <string name="dialog_new_like_us_yes">Yes</string>
    <string name="dialog_new_rate_title">How about rate us on Google Play?</string>
    <string name="dialog_new_rate_title_2">Please, rate us!</string>
    <string name="dialog_new_rate_us_no">No, thanks</string>
    <string name="dialog_new_rate_us_yes">Ok, sure</string>
    <string name="dialog_replay_options_1">Replay</string>
    <string name="dialog_replay_options_2">from</string>
    <string name="dialog_timeout_title">Time is over</string>
    <string name="dialog_try_workout_confirm_button_text">Go to Workout</string>
    <string name="dialog_unlock_online_warning">"You don't have enough coins for online game"</string>
    <string name="dialog_unlock_title">Do you want to unlock?</string>
    <string name="dialog_unlock_warning">"You don't have enough coins to unlock the game"</string>
    <string name="dialog_win">Well done!</string>
    <string name="dialog_you_finished_game">You finished game</string>
    <string name="earnings">Earnings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="exit">Exit</string>
    <string name="explore">Explore</string>
    <string name="facebook_login">Login</string>
    <string name="facebook_share_messages">"Brain Training - easy and simple those cool small games. I'm glad I gave it a try, and suggest you do the same. You'll like it!"</string>
    <string name="fail">Fail</string>
    <string name="fail_dialog_game_suggestion_text">"Here's another game for you"</string>
    <string name="fail_title">You not finished</string>
    <string name="finish">Finish</string>
    <string name="game">Game</string>
    <string name="game20_color0">Yellow</string>
    <string name="game20_color1">Red</string>
    <string name="game20_color2">Brown</string>
    <string name="game20_color3">Green</string>
    <string name="game20_color4">Blue</string>
    <string name="game20_color5">Black</string>
    <string name="game5_dialog_text">Number of Cells?</string>
    <string name="game7_success_text">SUCCESS!</string>
    <string name="game7_timer_prefix">Time:</string>
    <string name="game_dexcription_banner">"- thousands of wallpapers
- only HD and QHD images
- new images every day"</string>
    <string name="game_finished">Game finished</string>
    <string name="game_name_1">Memory Grid</string>
    <string name="game_statistic">Game Statistic</string>
    <string name="help_games_in_workout_description">Each day 4 games are generated for you</string>
    <string name="help_games_in_workout_title">GAMES IN WORKOUT</string>
    <string name="help_level_description">Get higher levels by showing great results</string>
    <string name="help_level_title">LEVEL</string>
    <string name="help_smart_points_description">SP - unique system that measures your brain skills</string>
    <string name="help_smart_points_title">SMART POINTS</string>
    <string name="help_workout_calendar_description">Calendar shows completed workouts</string>
    <string name="help_workout_calendar_title">WORKOUT CALENDAR</string>
    <string name="hint_nick_name">Name</string>
    <string name="last_games">Last Games</string>
    <string name="maximum_level">Maximum level</string>
    <string name="play">Play</string>
    <string name="pro_discount_upgrade_for2">UPGRADE for</string>
    <string name="remove_ads_dialog_title">"Tired of Ads?
Remove it!"</string>
    <string name="remove_for2">REMOVE for</string>
    <string name="skip">Skip</string>
    <string name="font_roboto_bold">Roboto-Bold.ttf</string>
    <string name="font_roboto_light">Roboto-Light.ttf</string>
    <string name="font_roboto_medium">Roboto-Medium.ttf</string>
    <string name="font_roboto_regular">Roboto-Regular.ttf</string>
    <string name="plus100">+100</string>
    <string name="plus50">+50</string>
</resources>