<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:orientation="vertical" android:background="#99000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/content" android:background="@drawable/background_dialog_vip_new" android:padding="24.0dip" android:layout_width="328.0dip" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="28.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="28.0dip">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
            <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_1" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textColor="@android:color/black" android:gravity="center|left" android:layout_gravity="center_vertical" android:paddingLeft="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_games_in_workout_title" fontPath="@string/font_roboto_medium" />
                <TextView android:textSize="12.0sp" android:textColor="@color/vip_text_color" android:gravity="center|left" android:layout_gravity="center_vertical" android:paddingLeft="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_games_in_workout_description" fontPath="@string/font_roboto_light" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip">
            <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_2" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textColor="@android:color/black" android:gravity="center|left" android:layout_gravity="center_vertical" android:paddingLeft="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_workout_calendar_title" fontPath="@string/font_roboto_medium" />
                <TextView android:textSize="12.0sp" android:textColor="@color/vip_text_color" android:gravity="center|left" android:layout_gravity="center_vertical" android:paddingLeft="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_workout_calendar_description" fontPath="@string/font_roboto_light" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip">
            <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_3" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textColor="@android:color/black" android:gravity="center|left" android:layout_gravity="center_vertical" android:paddingLeft="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_level_title" fontPath="@string/font_roboto_medium" />
                <TextView android:textSize="12.0sp" android:textColor="@color/vip_text_color" android:gravity="center|left" android:layout_gravity="center_vertical" android:paddingLeft="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_level_description" fontPath="@string/font_roboto_light" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip">
            <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_4" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textColor="@android:color/black" android:gravity="center|left" android:layout_gravity="center_vertical" android:paddingLeft="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_smart_points_title" fontPath="@string/font_roboto_medium" />
                <TextView android:textSize="12.0sp" android:textColor="@color/vip_text_color" android:gravity="center|left" android:layout_gravity="center_vertical" android:paddingLeft="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_smart_points_description" fontPath="@string/font_roboto_light" />
            </LinearLayout>
        </LinearLayout>
        <TextView android:textSize="20.0sp" android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/close" android:background="@drawable/button_play_online" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginLeft="24.0dip" android:layout_marginTop="24.0dip" android:layout_marginRight="24.0dip" android:minWidth="160.0dip" android:text="@string/back" fontPath="@string/font_roboto_regular" />
    </LinearLayout>
</FrameLayout>