<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/dark_transparent" android:padding="@dimen/padding_small" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@color/background" android:paddingLeft="@dimen/login_padding_horizontal" android:paddingTop="@dimen/login_padding_vertical" android:paddingRight="@dimen/login_padding_horizontal" android:paddingBottom="@dimen/login_padding_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
      xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
        <ImageView android:id="@id/logo" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:src="@drawable/cupdialog" android:scaleType="centerInside" android:layout_weight="1.0" />
        <TextView android:textSize="24.0sp" android:textColor="#ff6f7275" android:gravity="center" android:id="@id/enterNick" android:paddingLeft="@dimen/padding_medium" android:paddingRight="@dimen/padding_medium" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_look_ranks" android:layout_below="@id/logo" />
        <EditText android:textSize="26.0sp" android:textColor="@android:color/black" android:textColorHint="@color/grid_stroke" android:gravity="center" android:id="@id/nickname" android:background="@android:color/transparent" android:paddingLeft="@dimen/padding_xsmall" android:paddingRight="@dimen/padding_xsmall" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_medium" android:minHeight="@dimen/login_min_height" android:hint="@string/hint_nick_name" android:cursorVisible="true" android:singleLine="true" android:inputType="text">
            <requestFocus />
        </EditText>
        <View android:id="@id/UnderLine" android:background="#ff6f7275" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="2.0dip" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/plus50_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/win_dialog_padding_small">
            <TextView android:textSize="@dimen/login_button_text" android:textColor="#ff6f7275" android:id="@id/plus50" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/plus50" />
            <ImageView android:layout_width="22.0dip" android:layout_height="22.0dip" android:layout_marginLeft="@dimen/win_dialog_padding_small" android:src="@drawable/ic_coin" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/primary_buttons" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="32.0dip" android:weightSum="1.0">
            <TextView android:textSize="@dimen/login_button_text" android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="start" android:id="@id/skip" android:background="@drawable/button_play" android:layout_width="0.0dip" android:layout_height="@dimen/login_button_min_height" android:layout_marginRight="@dimen/padding_small" android:layout_marginBottom="1.0dip" android:text="@string/skip" android:layout_weight="0.5" />
            <TextView android:enabled="false" android:textSize="@dimen/login_button_text" android:textColor="@color/current_top" android:gravity="center" android:layout_gravity="end" android:id="@id/play" android:background="@drawable/button_play" android:layout_width="0.0dip" android:layout_height="@dimen/login_button_min_height" android:layout_marginLeft="@dimen/padding_small" android:layout_marginBottom="1.0dip" android:text="@string/play" android:layout_weight="0.5" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/facebook_login" android:background="@drawable/button_facebook" android:layout_width="fill_parent" android:layout_height="@dimen/login_button_min_height" android:layout_marginTop="@dimen/padding_xsmall">
            <ImageView android:layout_gravity="center_vertical" android:layout_width="28.0dip" android:layout_height="28.0dip" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" app:srcCompat="@drawable/ic_social_facebook" />
            <TextView android:textSize="@dimen/login_button_text" android:textColor="@android:color/white" android:id="@id/login" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/facebook_login" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/login_button_text" android:textColor="@android:color/white" android:id="@id/plus100" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/plus100" />
            <ImageView android:layout_width="22.0dip" android:layout_height="22.0dip" android:layout_marginLeft="@dimen/win_dialog_padding_xsmall" android:layout_marginRight="@dimen/win_dialog_padding_small" android:src="@drawable/ic_coin" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>