<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="#bb000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/content" android:background="@drawable/background_dialog_vip_new" android:paddingBottom="44.0dip" android:layout_width="328.0dip" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="28.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="28.0dip" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
        <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/pro50off" android:scaleType="fitXY" android:adjustViewBounds="true" />
            <TextView android:textSize="@dimen/offer_dialog_discount_font" android:textColor="@android:color/white" android:gravity="center|top" android:layout_gravity="center|top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="50%" fontPath="@string/font_roboto_bold" />
            <TextView android:textSize="@dimen/offer_dialog_discount_font" android:textColor="@android:color/white" android:gravity="center|top" android:layout_gravity="center|top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="65.0dip" android:text="OFF" fontPath="@string/font_roboto_light" />
            <TextView android:textSize="22.0sp" android:textColor="@android:color/white" android:gravity="center|top" android:layout_gravity="center|top" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/offer_dialog_discount_padding" android:text="PRO-VERSION" fontPath="@string/font_roboto_regular" />
        </FrameLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="44.0dip" android:layout_marginTop="16.0dip">
            <ImageView android:layout_gravity="center_vertical" android:layout_width="@dimen/offer_dialog_item_size" android:layout_height="@dimen/offer_dialog_item_size" android:src="@drawable/removeadsicon" />
            <TextView android:textSize="22.0sp" android:textColor="@color/vip_text_color" android:gravity="center|left" android:layout_gravity="center_vertical" android:paddingLeft="16.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/banner_text2_1" fontPath="@string/font_roboto_light" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="44.0dip" android:layout_marginTop="16.0dip">
            <ImageView android:layout_gravity="center_vertical" android:layout_width="@dimen/offer_dialog_item_size" android:layout_height="@dimen/offer_dialog_item_size" android:src="@drawable/unlockgamesicon" />
            <TextView android:textSize="22.0sp" android:textColor="@color/vip_text_color" android:gravity="center|left" android:layout_gravity="center_vertical" android:paddingLeft="16.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/banner_text2_2" fontPath="@string/font_roboto_light" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="44.0dip" android:layout_marginTop="16.0dip">
            <ImageView android:layout_gravity="center_vertical" android:layout_width="@dimen/offer_dialog_item_size" android:layout_height="@dimen/offer_dialog_item_size" android:src="@drawable/coinsicon" />
            <TextView android:textSize="22.0sp" android:textColor="@color/vip_text_color" android:gravity="center|left" android:layout_gravity="center_vertical" android:paddingLeft="16.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/banner_text2_3" fontPath="@string/font_roboto_light" />
        </LinearLayout>
    </LinearLayout>
    <ImageView android:id="@id/close" android:background="@drawable/close_btn_background_new" android:padding="4.0dip" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginTop="-16.0dip" android:layout_marginRight="-16.0dip" android:tint="@color/vip_text_color" android:layout_alignTop="@id/content" android:layout_alignRight="@id/content" app:srcCompat="@drawable/ic_close" />
    <TextView android:textSize="20.0sp" android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/upgrade" android:background="@drawable/button_pro_new" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="56.0dip" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:layout_marginBottom="-28.0dip" android:minWidth="260.0dip" android:text="@string/pro_discount_upgrade_for2" android:layout_alignBottom="@id/content" android:layout_centerHorizontal="true" fontPath="@string/font_roboto_regular" />
</RelativeLayout>